# Chatops-incident-agent

./: .dockerignore  .env.example  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
docs/: architecture.md
docs/superpowers/specs/: 2026-06-20-discord-integration-design.md  2026-06-20-phase7-containerization-design.md
scripts/: smoke_test.py
src/: main.py
src/api/: routes.py  schemas.py
src/core/: config.py
src/db/: __init__.py  engine.py  models.py
src/services/: __init__.py  analysis_service.py  discord.py  gemini_service.py  router.py  schemas.py
tests/: test_api.py
