[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatops-incident-agent"
version = "0.1.0"
description = "Async ChatOps incident triage agent with dual-LLM routing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "google-genai>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src"]